# roko

./: .dockerignore  .gitignore  .railwayignore  12-PITCH-STRATEGY.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOY-RAILWAY.md  Dockerfile  Dockerfile.worker  README.md  cliff.toml  deny.toml  dev.sh  docker-compose.dev.yml  fly.toml  railway.json  railway.toml  release-plz.toml
apps/agent-relay/: Cargo.toml
apps/agent-relay/src/: bus.rs  chain_watcher.rs  lib.rs  main.rs  protocol.rs  state.rs
apps/agent-relay/tests/: integration.rs
apps/mirage-rs/: Cargo.toml  README.md
apps/mirage-rs/examples/: README.md  agent_simulation.rs  persona_chain_native.rs  roko_chain_watcher.rs  seed_chain_fixtures.rs
apps/mirage-rs/src/: chain_rpc.rs  cow.rs  events.rs  fork.rs  integration.rs  lib.rs  main.rs  persist.rs  provider.rs  rate_limit.rs  replay.rs  resources.rs  rpc.rs  scenario.rs
apps/mirage-rs/static/: demo-agents.html  index.html  quickstart.sh  style.css
apps/mirage-rs/tests/: http_api.rs  integration.rs  roko_e2e.rs
apps/roko-chain-watcher/: Cargo.toml  README.md
apps/roko-chain-watcher/src/: block_observer.rs  config.rs  known_addresses.rs  main.rs  reactions.rs  rpc_client.rs  watcher.rs
crates/roko-acp/: Cargo.toml
crates/roko-acp/src/: acp_adapter.rs  bridge_events.rs  bridge_fs.rs  bridge_gates.rs  bridge_plan.rs  bridge_terminal.rs  bridge_usage.rs  builtin_tools.rs  commands.rs  config.rs  config_options.rs  config_watch.rs  elicitation.rs  event_forward.rs  handler.rs  knowledge.rs  lib.rs  permissions.rs  pipeline.rs  runner.rs  session.rs  transport.rs  types.rs  workflow.rs
crates/roko-acp/tests/: helpers.rs  protocol_conformance.rs  telemetry_integration.rs
crates/roko-agent/: Cargo.toml  README.md
crates/roko-agent-server/: Cargo.toml  README.md
crates/roko-agent-server/src/: lib.rs  registration.rs  state.rs
crates/roko-agent-server/tests/: relay_registration.rs
crates/roko-agent/src/: agent.rs  cache.rs  chat_types.rs  claude_agent.rs  claude_cli_agent.rs  codex_agent.rs  composition.rs  cursor_agent.rs  cursor_cli_agent.rs  dispatch_resolver.rs  error.rs  exec.rs  file_cache.rs  gateway_events.rs  http.rs  introspection.rs  lib.rs  lifecycle.rs  metamorphosis.rs  mock.rs  model_call_service.rs  multi_pool.rs  observer.rs  ollama_agent.rs  ollama_backend.rs  openai_agent.rs  openai_compat_backend.rs  pool.rs  provider.rs  rate_limit.rs  retry.rs  runtime_events.rs  session.rs  streaming.rs  task_runner.rs  testutil.rs  usage.rs
crates/roko-agent/tests/: chat_message_serde.rs  chat_request.rs  chat_response_to_message.rs  codex_conformance.rs  codex_parity.rs  contract_tests.rs  contracts.rs  cursor_parity.rs  cursor_streaming.rs  exec_parity.rs  fixture_loading.rs  gemini_integration.rs  glm_tool_loop.rs  glm_web_search.rs  kimi_partial.rs  kimi_thinking_tools.rs  kimi_tool_loop.rs  mock_provider.rs  ollama_tool_loop.rs  openai_parity.rs  openrouter_integration.rs  perplexity_integration.rs  process_integration.rs  provider_integration.rs  role_tools.rs  safety_integration.rs  signal_chat_roundtrip.rs  stream_accumulator.rs  stream_chunk_types.rs  subprocess_safety_parity.rs  thinking_response.rs  tool_loop_integration.rs
crates/roko-calc/: Cargo.toml
crates/roko-chain/: Cargo.toml  README.md
crates/roko-chain/abi/: ISFRBountyPool.json  ISFROracle.json  MockERC20.json  RoleRegistry.json  WorkerRegistry.json
crates/roko-chain/src/: agent_registry.rs  alloy_impl.rs  block_watcher.rs  chain_profile.rs  client.rs  collusion.rs  futures_market.rs  heartbeat_ext.rs  identity_economy_identity.rs  identity_economy_markets.rs  isfr.rs  isfr_bootstrap.rs  isfr_keeper.rs  isfr_oracle_submit.rs  korai_token.rs  lib.rs  marketplace.rs  mock.rs  nelson_siegel.rs  observer.rs  phase2.rs  reputation_registry.rs  tools.rs  trace_rank.rs  triage.rs  types.rs  validation_registry.rs  wallet.rs  witness.rs  x402.rs
crates/roko-chain/tests/: alloy_live.rs
crates/roko-cli/: Cargo.toml  README.md  build.rs
crates/roko-cli/examples/: bench_autoplay.rs  inline_autoplay.rs  inline_demo.rs
crates/roko-cli/scripts/: README.md  swebench_baseline.py  swebench_run.py  swebench_validate.py  test_swebench_run.py
crates/roko-cli/src/: agent_config.rs  agent_episode.rs  agent_exec.rs  agent_serve.rs  agent_spawn.rs  auth.rs  auth_detect.rs  bench.rs  bench_demo.rs  bootstrap.rs  chain_handler.rs  chain_registry.rs  chat.rs  chat_history.rs  chat_inline.rs  chat_session.rs  clean.rs  config.rs  config_cmd.rs  config_helpers.rs  context_loader.rs  credentials.rs  custody.rs  daemon.rs  demo_cmd.rs  demo_seed.rs  deployment.rs  dispatch_direct.rs  dispatch_helpers.rs  dispatch_v2.rs  doctor.rs  dry_run.rs  episode.rs  event_sources.rs  explain.rs  gate_runner.rs  heartbeat.rs  hints.rs  index.rs  inference_observer.rs  (+39 more)
crates/roko-cli/tests/: agent_config.rs  agent_lifecycle.rs  agent_serve.rs  chain_integration.rs  cli_fallback.rs  cost_dedup.rs  dispatch_feedback_projection_e2e.rs  doctor.rs  e2e.rs  e2e_domain.rs  e2e_self_host.rs  job_cli.rs  learn_paths.rs  learn_paths_fixture.rs  ollama_e2e.rs  phase0_wiring.rs  phase1_protocols.rs  (+11 more)
crates/roko-compose/: Cargo.toml  README.md
crates/roko-conductor/: Cargo.toml  README.md
crates/roko-core/: Cargo.toml  README.md
crates/roko-daimon/: Cargo.toml  README.md
crates/roko-demo/: Cargo.toml
crates/roko-dreams/: Cargo.toml  README.md
crates/roko-fs/: Cargo.toml  README.md
crates/roko-gate/: Cargo.toml  README.md
crates/roko-golem/: Cargo.toml
crates/roko-graph/: Cargo.toml
crates/roko-index/: Cargo.toml
crates/roko-lang-go/: Cargo.toml
crates/roko-lang-rust/: Cargo.toml
crates/roko-lang-typescript/: Cargo.toml
crates/roko-learn/: Cargo.toml  README.md
crates/roko-mcp-code/: Cargo.toml  README.md
crates/roko-mcp-github/: Cargo.toml
crates/roko-mcp-scripts/: Cargo.toml
crates/roko-mcp-slack/: Cargo.toml
tests/: Cargo.toml  endpoint_smoke.py  integration_test.rs  security-smoke.sh
tests/src/: lib.rs
tests/tests/: end_to_end.rs  tool_equivalence.rs  tool_replay.rs
(+10428 files in other folders)
