[workspace]
resolver = "2"
members = [
    # Support primitives (copied from bardo/) — reusable, not Mori code
    "crates/roko-primitives",
    "crates/roko-runtime",

    # Roko kernel
    "crates/roko-core",
    # Standard trait impls (MemorySubstrate, NoOp, simple routers/scorers)
    "crates/roko-std",
    # Concrete Gate impls (ShellGate, CompileGate, ...)
    "crates/roko-gate",
    # Filesystem-backed Substrate (.roko/signals.jsonl)
    "crates/roko-fs",
    # Composer impls (PromptComposer, SectionScorer)
    "crates/roko-compose",
    # Plugin SDK (EventSource, FeedbackCollector)
    "crates/roko-plugin",
    # Agent backends (MockAgent, ExecAgent, future: ClaudeAgent, ...)
    "crates/roko-agent",
    # Orchestration layer (plan discovery, task DAG, worktree manager, executor)
    "crates/roko-orchestrator",
    # Chain client + wallet trait abstractions (reads + signed writes)
    "crates/roko-chain",
    # End-to-end integration tests
    "tests",

    # Apps (binaries + larger standalone components)
    # mirage-rs: in-process EVM fork simulator. Default build = pure EVM surface.
    # Opt-in `chain` feature adds HDC / InsightEntry / pheromone subsystems.
    # Opt-in `roko` feature bridges to roko-core traits (Gate, Substrate).
    "apps/mirage-rs",
    "apps/agent-relay",
    # roko-chain-watcher: long-running agent that observes a mirage chain and
    # posts insights back via HTTP JSON-RPC.
    "apps/roko-chain-watcher",
    # Standalone MCP servers used by agents via --mcp-config.
    "crates/roko-mcp-stdio",
    "crates/roko-mcp-github",
    "crates/roko-mcp-slack",
    "crates/roko-mcp-scripts",
    "crates/roko-mcp-code",

    # Roko CLI: minimal user-facing binary that wires the universal loop
    # (prompt → compose → agent → gate → persist → policy) against a working
    # directory. Reads its agent/gate config from ./roko.toml.
    "crates/roko-cli",
    # HTTP server crate extracted from roko-cli's serve module.
    "crates/roko-serve",
    # Per-agent HTTP server extracted from the legacy mirage dashboard surface.
    "crates/roko-agent-server",
    # ACP server surface for editor integrations.
    "crates/roko-acp",

    # Conductor — reactive intelligence layer: watchers, circuit breaker, interventions.
    "crates/roko-conductor",

    # Learning subsystems — episodes, playbooks, skills, caches, pattern discovery.
    "crates/roko-learn",

    # Neuro subsystem — knowledge + memory.
    "crates/roko-neuro",

    "crates/roko-dreams",
    # Daimon subsystem — affect and motivation modeling.
    "crates/roko-daimon",

    # Demo environment orchestrator — deploys contracts from roko/contracts/,
    # seeds fixtures, spawns a clade of agents per declarative scenario manifest.
    "crates/roko-demo",

    # Language providers — trait impls for specific languages/build systems.
    "crates/roko-lang-rust",
    "crates/roko-lang-typescript",
    "crates/roko-lang-go",

    # Code intelligence — parsing, symbol graphs, PageRank, HDC fingerprints.
    "crates/roko-index",

    # Graph execution engine — DAG-based cell orchestration with fan-out/fan-in.
    "crates/roko-graph",
]
default-members = [
    # Ordinary root builds target the main CLI plus the MCP servers we ship.
    "crates/roko-cli",
    "crates/roko-mcp-code",
    "crates/roko-mcp-github",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Roko <engineering@roko.dev>"]
repository = "https://github.com/nunchi/roko"
homepage = "https://github.com/nunchi/roko"

# cargo-dist configuration for prebuilt binary releases.
# Targets: macOS ARM + Intel, Linux x86_64 glibc + musl.
[workspace.metadata.dist]
cargo-dist-version = "0.28.1"
ci = "github"
installers = ["shell"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
]
install-path = "CARGO_HOME"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.50", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
notify = "6"

# Graph
petgraph = "0.7"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# YAML (frontmatter parsing)
serde_yaml_ng = "0.10"

# Async trait dispatch
async-trait = "0.1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"

# Testing & benchmarks
proptest = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# EVM / chain stack (used by apps/mirage-rs)
alloy-primitives = "1"
revm = { version = "36.0", features = ["std"] }
jsonrpsee = { version = "0.26", features = ["server", "http-client"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "stream"] }
octocrab = "0.49"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tower = { version = "0.5", features = ["limit", "load-shed"] }
tower-http = { version = "0.6", features = ["cors", "fs", "limit", "trace"] }
parking_lot = "0.12"
dashmap = "6"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
futures-util = "0.3"
bytes = "1"
http-body-util = "0.1"
k256 = { version = "0.13", features = ["ecdsa"] }
sysinfo = "0.33"
lru = "0.12"
globset = "0.4"
glob = "0.3"
rand = "0.8"
rand_chacha = "0.3"
regex = "1"
unicode-segmentation = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
jsonwebtoken = "9"
webbrowser = "1"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
unwrap_used = "deny"
# Pedantic style lints allowed workspace-wide (non-correctness):
redundant_pub_crate = "allow"
uninlined_format_args = "allow"
needless_raw_string_hashes = "allow"
option_if_let_else = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown = "allow"
missing_panics_doc = "allow"
clone_on_copy = "allow"
items_after_statements = "allow"
unused_async = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
# Nursery lints allowed (false positives or impractical to fix):
future_not_send = "allow"
large_futures = "allow"
redundant_clone = "allow"
significant_drop_tightening = "allow"
or_fun_call = "allow"
# Additional pedantic allows:
unnecessary_wraps = "allow"
match_wildcard_for_single_variants = "allow"
single_match_else = "allow"
cast_possible_wrap = "allow"
if_not_else = "allow"
wildcard_imports = "allow"
option_option = "allow"
used_underscore_binding = "allow"
semicolon_if_nothing_returned = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
unnested_or_patterns = "allow"
map_unwrap_or = "allow"
unused_self = "allow"
missing_const_for_fn = "allow"
assigning_clones = "allow"
cast_lossless = "allow"
default_trait_access = "allow"
large_stack_frames = "allow"
print_literal = "allow"
single_match = "allow"
suboptimal_flops = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
useless_let_if_seq = "allow"
branches_sharing_code = "allow"
explicit_iter_loop = "allow"
format_in_format_args = "allow"
similar_names = "allow"
expect_used = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
bool_to_int_with_if = "allow"
format_push_string = "allow"
unnecessary_map_or = "allow"
nonminimal_bool = "allow"
option_as_ref_cloned = "allow"
implicit_clone = "allow"
ignored_unit_patterns = "allow"
significant_drop_in_scrutinee = "allow"
manual_is_variant_and = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = true
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 2
