[package]
name = "roko-tests"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "End-to-end integration tests for the Roko primitive stack."
publish = false

[lints]
workspace = true

[dependencies]
# (none in src/; this is tests-only)

[dev-dependencies]
roko-core = { path = "../crates/roko-core" }
roko-std = { path = "../crates/roko-std" }
roko-fs = { path = "../crates/roko-fs" }
roko-gate = { path = "../crates/roko-gate" }
roko-compose = { path = "../crates/roko-compose" }
roko-agent = { path = "../crates/roko-agent" }
async-trait = "0.1"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
