[package]
name = "roko-chain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "On-chain client abstractions for Roko: ChainClient + ChainWallet traits and mock implementations."

[lints]
workspace = true

[features]
default = []
# Enables an alloy-backed `AlloyChainClient` + `AlloyChainWallet` for real JSON-RPC
# endpoints (e.g. mirage-rs, anvil, live testnets). Pulls in alloy's provider +
# signer + consensus stacks, so leave this off for pure mock/trait consumers.
alloy-backend = ["dep:alloy", "dep:alloy-primitives", "dep:reqwest"]

[dependencies]
roko-core = { path = "../roko-core" }
async-trait = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
parking_lot = { workspace = true }
alloy-primitives = { workspace = true, optional = true }
alloy = { version = "1", features = ["full"], optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
