[package]
name = "roko-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The `roko` binary: minimal CLI that drives the universal loop (prompt → compose → agent → gate → persist) against a working directory."

[lints]
workspace = true

[[bin]]
name = "roko"
path = "src/main.rs"

[dependencies]
roko-core = { path = "../roko-core" }
roko-std = { path = "../roko-std" }
roko-fs = { path = "../roko-fs" }
roko-compose = { path = "../roko-compose" }
roko-agent = { path = "../roko-agent" }
roko-gate = { path = "../roko-gate" }
roko-orchestrator = { path = "../roko-orchestrator" }
roko-learn = { path = "../roko-learn" }
roko-conductor = { path = "../roko-conductor" }
bardo-runtime = { path = "../bardo-runtime" }

clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
dotenvy = "0.15"

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
