[package]
name = "roko-compose"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Composer implementations for Roko: prompt assembly with token budgets, context packs, plan decomposition."

[lints]
workspace = true

[dependencies]
roko-core = { path = "../roko-core" }
roko-learn = { path = "../roko-learn" }
roko-neuro = { path = "../roko-neuro" }
bardo-primitives = { path = "../bardo-primitives", optional = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
default = []
hdc = ["dep:bardo-primitives", "roko-neuro/hdc"]

[dev-dependencies]
roko-std = { path = "../roko-std" }
tokio = { workspace = true, features = ["full", "macros", "test-util"] }
tempfile = { workspace = true }
