[package]
name = "roko-compose"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Composer implementations for Roko: prompt assembly with token budgets, context packs, plan decomposition."

[lints]
workspace = true

[dependencies]
roko-agent = { path = "../roko-agent" }
roko-core = { path = "../roko-core" }
roko-learn = { path = "../roko-learn" }
roko-neuro = { path = "../roko-neuro" }
roko-primitives = { path = "../roko-primitives", optional = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tiktoken-rs = "0.11.0"
tokenizers = { version = "0.22.2", default-features = false, features = ["fancy-regex"] }

[features]
default = []
hdc = ["dep:roko-primitives", "roko-neuro/hdc"]

[dev-dependencies]
roko-std = { path = "../roko-std" }
tokio = { workspace = true, features = ["full", "macros", "test-util"] }
tempfile = { workspace = true }
insta = "1.43.2"

[package.metadata.roko]
layer = 2
