[package]
name = "roko-conductor"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Roko conductor: reactive intelligence layer — watchers, circuit breaker, and intervention policies."

[lints]
workspace = true

[dependencies]
roko-core = { path = "../roko-core" }
roko-learn = { path = "../roko-learn" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
